fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@ body {
     padding: 60px 40px 40px;
     font-family: Gilroy-reg;
     font-weight: 600;
-    overflow: hidden;
     user-select: none;
 }
 
